--- a/default.scss
+++ b/default.scss
@@ -1,67 +1,98 @@
 $white: #ffffff;
 $dark-grey: #272828;
+$blue: #10578d;
 
-body {margin: 0px;font-family: Helvetica Neue, Arial}
+body {
+	margin: 0px;font-family: Helvetica Neue, Arial;
 
-nav {
-	background: $dark-grey;
-	padding: 15px;
-	text-align: center;
-	font-family: Times New Roman;
-	font-weight: bolder;
-	font-size: 14pt;
-	position: fixed;
-	width: 100%;
+	nav {
+		background: $dark-grey;
+		padding: 15px;
+		text-align: center;
+		font-family: Times New Roman;
+		font-weight: bolder;
+		font-size: 14pt;
+		position: fixed;
+		width: 100%;
 
-	a {
+		a {
+			color: $white;
+			text-decoration: none;
+			margin-right: 20px;
+		}
+	}
+
+	header {
+		background: url('header.jpg');
+		background-size: cover;
+		background-position: 0 -106px;
+		padding: 10px;
 		color: $white;
-		text-decoration: none;
-		margin-right: 20px;
-	}
-}
-
-header {
-	background: url('header.jpg');
-	background-size: cover;
-	background-position: 0 -106px;
-	padding: 10px;
-	color: $white;
-	text-align: center;
-	height: 400px;
-	border-bottom: 2px solid $dark-grey;
-	padding-top: 44px;
-
-	h1 {
-		margin: 20px auto 0px auto;
-		font-size: 42pt;
-		text-shadow: 1px 1px 3px $dark-grey;
-	}
-
-	h2 {
-		margin-top: 10px;
-		color: $dark-grey;
-	}
-
-	@media screen and (max-width: 1000px) {
-		background-position: 0 -70px;
-	}	
-
-	@media screen and (max-width: 700px) {
-		background-position: 0 0px;
-	}	
-
-	@media screen and (max-width: 700px) {
-		height: 300px;
+		text-align: center;
+		height: 400px;
+		border-bottom: 2px solid $dark-grey;
+		padding-top: 44px;
 
 		h1 {
-			margin: 0px;
+			margin: 20px auto 0px auto;
+			font-size: 42pt;
+			text-shadow: 1px 1px 3px $dark-grey;
 		}
+
 		h2 {
 			margin-top: 10px;
+			color: $dark-grey;
 		}
-	}	
 
-	h1 {
+		@media screen and (max-width: 1100px) {
+			background-position: 0 -70px;
+		}	
 
+		@media screen and (max-width: 1029px) {
+			background-position: 0 0px;
+		}	
+
+		@media screen and (max-width: 730px) {
+			height: 300px;
+
+			h1 {
+				font-size: 30pt;
+				margin: 15px auto 0px auto;
+			}
+			h2 {
+				margin-top: 200px;
+				color: $white;
+			}
+		}	
+	}
+
+	section {
+		margin: 30px;
+
+		h1 {
+			margin: 0px auto 10px auto;
+			color: $blue;
+			font-size: 36pt;
+		}
+
+		a.anchor {
+			clear: both;
+			display: block;
+			position: relative;
+			top: -60px;
+			left: -30px;
+		}
+
+		img {
+			width: 240px;
+			float: left;
+			margin-right: 20px;
+
+			@media screen and (max-device-width: 480px) {
+				display: none;
+			}
+
+
+		}
 	}
 }
