--- a/default.scss
+++ b/default.scss
@@ -67,7 +67,7 @@ body {
 	}
 
 	section {
-
+		float: left;
 		margin: 30px;
 
 		h1, h2, h3 {
@@ -92,12 +92,12 @@ body {
 		}
 
 		img {
-			width: 240px;
+			width: 500px;
 			float: left;
 			margin-right: 20px;
 
 			@media screen and (max-device-width: 480px) {
-				display: none;
+				border: 1px solid red;
 			}
 		}
 
