--- a/default.scss
+++ b/default.scss
@@ -1,9 +1,10 @@
 $white: #ffffff;
 $dark-grey: #272828;
+$light-grey: #a1a1a1;
 $blue: #10578d;
 
 body {
-	margin: 0px;font-family: Helvetica Neue, Arial;
+	margin: 0 0 30px 0;font-family: Helvetica Neue, Arial;
 
 	nav {
 		background: $dark-grey;
@@ -18,12 +19,12 @@ body {
 		a {
 			color: $white;
 			text-decoration: none;
-			margin-right: 20px;
+			margin-right: 22px;
 		}
 	}
 
 	header {
-		background: url('header.jpg');
+		background: url('header.png');
 		background-size: cover;
 		background-position: 0 -106px;
 		padding: 10px;
@@ -34,9 +35,10 @@ body {
 		padding-top: 44px;
 
 		h1 {
+			color: $blue;
 			margin: 20px auto 0px auto;
 			font-size: 42pt;
-			text-shadow: 1px 1px 3px $dark-grey;
+			text-shadow: 1px 1px 3px $light-grey;
 		}
 
 		h2 {
@@ -67,8 +69,8 @@ body {
 	}
 
 	section {
-		float: left;
 		margin: 30px;
+		word-wrap: break-word;
 
 		h1, h2, h3 {
 			color: $blue;
@@ -76,7 +78,7 @@ body {
 
 		h1 {
 			margin: 0px auto 10px auto;
-			font-size: 36pt;
+			font-size: 32pt;
 		}
 
 		a {
@@ -96,17 +98,34 @@ body {
 			float: left;
 			margin-right: 20px;
 
-			@media screen and (max-device-width: 480px) {
-				border: 1px solid red;
+			&.right {
+				float: right;
+				margin-right: 0;
+				margin-left: 20px;
+			}
+
+			@media screen and (max-width: 575px) {
+				width: 100%;
+				margin-bottom: 20px
 			}
 		}
 
 		div {
 			line-height: 150%;
+
+			&.travel-fun {
+
+				h1 {
+					margin-top: 40px;
+				}
+
+				a.anchor {
+					clear: none;
+				}
+			}
 		}
 
 		ul {
-			float: left;
 			list-style-type: square;
 		}
 	}
