--- a/default.scss
+++ b/default.scss
@@ -24,7 +24,7 @@ body {
 	}
 
 	header {
-		background: url('header.png');
+		background: url('header.jpg');
 		background-size: cover;
 		background-position: 0 -106px;
 		padding: 10px;
